Add mariadb driver

--- a/rebar.config
+++ b/rebar.config
@@ -9,9 +9,11 @@
            {sys_config, "config/test.sys.config"}
           ]}.
 
-{deps, [
-        {lager, "3.5.0"},
-        {recon, "2.3.2"}
+{deps, [{lager, "3.5.0"},
+        {recon, "2.3.2"},
+	{mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp", {tag, "1.8.0"}}},
+	{jiffy, {git, "https://github.com/davisp/jiffy.git", {tag, "1.1.1"}}},
+	{erlware_commons, {git, "https://github.com/erlware/erlware_commons.git", {tag, "v1.6.0"}}}
        ]}.
 
 {escript_main_app, luna}.
@@ -37,6 +39,9 @@
                              mnesia,
                              recon,
                              lager,
+			     mysql,
+			     jiffy,
+			     erlware_commons,
                              luna,
                              {wx, load},
                              {observer, load},
@@ -59,6 +64,9 @@
                                mnesia,
                                recon,
                                lager,
+			       mysql,
+			       jiffy,
+			       erlware_commons,
                                luna,
                                {wx, load},
                                {observer, load},
@@ -80,6 +88,9 @@
                               mnesia,
                               recon,
                               lager,
+			      mysql,
+			      jiffy,
+			      erlware_commons,
                               luna
                              ]},
                             {overlay,
@@ -99,6 +110,9 @@
           mnesia,
           recon,
           lager,
+	  mysql,
+	  jiffy,
+	  erlware_commons,
           luna,
           {wx, load},
           {observer, load},
