--- a/config/dev.sys.config
+++ b/config/dev.sys.config
@@ -1,25 +1,36 @@
 %% -*- mode:erlang -*-
-[{luna, [{k1, v1}, {kn, vn}]},
- {lager, [
-          {error_logger_redirect, false},
-          {colored, true},
-          {colors,[{debug,"\e[104m"},
-                   {info,"\e[100m"},
-                   {notice,"\e[1;36m"},
-                   {warning,"\e[33m"},
-                   {error,"\e[41m"},
-                   {critical,"\e[1;35m"},
-                   {alert,"\e[1;44m"},
-                   {emergency,"\e[1;41m"}]},
-          {handlers, [
-                      {lager_console_backend, [{level, debug}, {formatter, lager_default_formatter},
-                                               {formatter_config, ["\e[1;49;34m", time, "\e[0m ",
-                                                                   color, "[", severity,"]\e[0m ",
-                                                                   {module, ["\e[42m", module, "\e[0m", {line, [":\e[1;32m", line, "\e[0m "], ""}], ""}, "",
-                                                                   "\e[91m[\e[0m", message ,"\e[91m]\e[0m" , "\r\n"]}]},
-                      {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
-                      {lager_file_backend, [{file, "log/console.log"}, {level, info}]},
-                      {lager_file_backend, [{file, "log/debug.log"}, {level, debug}]}
-                     ]}
-         ]
- }].
+[ {luna, [ {'db.conf', #{ 'db.ip' => "127.0.0.1"
+			, 'db.port' => 3305 
+			, 'db.name' => "luna_dev_db"
+			, 'db.user' => "luna_dev_user"
+			, 'db.pass' => "luna_dev_pass"
+			, 'db.conn.retry.interval' => 5000 % MS
+			}
+	   }
+	 , {'db.workers', 8}
+	 , {'db.active.workers', {0, #{}}}
+	 ]
+  },
+  {lager, [
+	   {error_logger_redirect, false},
+	   {colored, true},
+	   {colors,[{debug,"\e[104m"},
+		    {info,"\e[100m"},
+		    {notice,"\e[1;36m"},
+		    {warning,"\e[33m"},
+		    {error,"\e[41m"},
+		    {critical,"\e[1;35m"},
+		    {alert,"\e[1;44m"},
+		    {emergency,"\e[1;41m"}]},
+	   {handlers, [
+		       {lager_console_backend, [{level, debug}, {formatter, lager_default_formatter},
+						{formatter_config, ["\e[1;49;34m", time, "\e[0m ",
+								    color, "[", severity,"]\e[0m ",
+								    {module, ["\e[42m", module, "\e[0m", {line, [":\e[1;32m", line, "\e[0m "], ""}], ""}, "",
+								    "\e[91m[\e[0m", message ,"\e[91m]\e[0m" , "\r\n"]}]},
+		       {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
+		       {lager_file_backend, [{file, "log/console.log"}, {level, info}]},
+		       {lager_file_backend, [{file, "log/debug.log"}, {level, debug}]}
+		      ]}
+	  ]
+  }].
