--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,8 @@
         {recon, "2.3.2"},
 	{mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp", {tag, "1.8.0"}}},
 	{jiffy, {git, "https://github.com/davisp/jiffy.git", {tag, "1.1.1"}}},
-	{erlware_commons, {git, "https://github.com/erlware/erlware_commons.git", {tag, "v1.6.0"}}}
+	{erlware_commons, {git, "https://github.com/erlware/erlware_commons.git", {tag, "v1.6.0"}}},
+	{syn, {git, "https://github.com/ostinelli/syn.git", {tag, "3.3.0"}}}
        ]}.
 
 {escript_main_app, luna}.
@@ -42,6 +43,7 @@
 			     mysql,
 			     jiffy,
 			     erlware_commons,
+			     syn,
                              luna,
                              {wx, load},
                              {observer, load},
@@ -67,6 +69,7 @@
 			       mysql,
 			       jiffy,
 			       erlware_commons,
+			       syn,
                                luna,
                                {wx, load},
                                {observer, load},
@@ -91,6 +94,7 @@
 			      mysql,
 			      jiffy,
 			      erlware_commons,
+			      syn,
                               luna
                              ]},
                             {overlay,
@@ -113,6 +117,7 @@
 	  mysql,
 	  jiffy,
 	  erlware_commons,
+	  syn,
           luna,
           {wx, load},
           {observer, load},
