Draft: chat API

--- a/config/dev.sys.config
+++ b/config/dev.sys.config
@@ -9,6 +9,8 @@
 	   }
 	 , {'db.workers', 8}
 	 , {'db.active.workers', {0, #{}}}
+	 , {'chat.timeout', 60} % Seting chat in hibernate mode after 60 minutes.
+	 , {'chat.hibernate', 30} % Stopping chat after 30 minutes.
 	 ]
   },
   {lager, [
