update prod release-profile

--- a/config/prod.sys.config
+++ b/config/prod.sys.config
@@ -1,6 +1,19 @@
 %% -*- mode:erlang -*-
-[{luna, [{k1, v1}, {kn, vn}]},
- {lager, [
+[ {luna, [ {'db.conf', #{ 'db.ip' => "127.0.0.1"
+			, 'db.port' => 3305 
+			, 'db.name' => "luna_dev_db"
+			, 'db.user' => "luna_dev_user"
+			, 'db.pass' => "luna_dev_pass"
+			, 'db.conn.retry.interval' => 5000 % MS
+			}
+	   }
+	 , {'db.workers', 8}
+	 , {'db.active.workers', {0, #{}}}
+	 , {'chat.timeout', 60} % Seting chat in hibernate mode after 60 minutes.
+	 , {'chat.hibernate', 30} % Stopping chat after 30 minutes.
+	 ]
+  }
+, {lager, [
           {error_logger_redirect, false},
           {colored, true},
           {colors,[{debug,"\e[104m"},
