--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ file=/var/run/supervisor.sock   ; (the path to the socket file)
 chmod=0700                       ; sockef file mode (default 0700)
 
 [supervisord]
-nodaemon=true
+;nodaemon=true
 logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
@@ -15,9 +15,21 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:mariadb]
-command=/usr/sbin/mysqld --user=mysql
+priority=1
+startsecs=5
+command=/srv/mariadb/startdb.sh
+autorestart=true
 autorestart=true
 user=mysql
 stderr_logfile=/tmp/mysql.err.log
 stdout_logfile=/tmp/mysql.std.log
+
+[program:mariadb-init]
+priority=500
+command=/srv/mariadb/init.sh container
+autorestart=true
+autorestart=false
+user=root
+stderr_logfile=/tmp/mysql-init.err.log
+stdout_logfile=/tmp/mysql-init.std.log
 
