--- a/config/dev.sys.config
+++ b/config/dev.sys.config
@@ -12,8 +12,20 @@
 	 , {'chat.timeout', 60} % Seting chat in hibernate mode after 60 minutes.
 	 , {'chat.hibernate', 30} % Stopping chat after 30 minutes.
 	 ]
-  },
-  {lager, [
+  }
+, {bingo, [ {conn, #{ ip => "127.0.0.1"
+		    , port => 2200
+		    , acceptors => 2
+		    , conns => 8
+		    , workers => 8
+		    }
+	    }
+	  , {'cluster.erpc.timeout', 2000}
+	  , {'mc.timeout', 2000}
+	  , {'mc.workers', 8}
+	  ]
+  }
+, {lager, [
 	   {error_logger_redirect, false},
 	   {colored, true},
 	   {colors,[{debug,"\e[104m"},
