--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,8 @@
 	{mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp", {tag, "1.8.0"}}},
 	{jiffy, {git, "https://github.com/davisp/jiffy.git", {tag, "1.1.1"}}},
 	{erlware_commons, {git, "https://github.com/erlware/erlware_commons.git", {tag, "v1.6.0"}}},
-	{syn, {git, "https://github.com/ostinelli/syn.git", {tag, "3.3.0"}}}
+	{syn, {git, "https://github.com/ostinelli/syn.git", {tag, "3.3.0"}}},
+	{bingo, {git, "https://github.com/mohsenmoqadam/bingo.git", {branch, "main"}}}
        ]}.
 
 {escript_main_app, luna}.
@@ -44,6 +45,7 @@
 			     jiffy,
 			     erlware_commons,
 			     syn,
+			     bingo,
                              luna,
                              {wx, load},
                              {observer, load},
@@ -70,6 +72,7 @@
 			       jiffy,
 			       erlware_commons,
 			       syn,
+			       bingo,
                                luna,
                                {wx, load},
                                {observer, load},
@@ -95,6 +98,7 @@
 			      jiffy,
 			      erlware_commons,
 			      syn,
+			      bingo,
                               luna
                              ]},
                             {overlay,
@@ -118,6 +122,7 @@
 	  jiffy,
 	  erlware_commons,
 	  syn,
+	  bingo,
           luna,
           {wx, load},
           {observer, load},
