--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,19 +17,36 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 [program:mariadb]
 priority=1
 startsecs=5
-command=/srv/mariadb/startdb.sh
+command=/srv/mariadb/start_mariadb.sh
+autostart=true
 autorestart=true
-autorestart=true
+stopasgroup=true
+killasgroup=true
+stopsignal=TERM
+stopwaitsecs=15
 user=mysql
-stderr_logfile=/tmp/mysql.err.log
-stdout_logfile=/tmp/mysql.std.log
+stderr_logfile=/tmp/mariadb.err.log
+stdout_logfile=/tmp/mariadb.std.log
 
 [program:mariadb-init]
-priority=500
+priority=450
 command=/srv/mariadb/init.sh container
-autorestart=true
+autostart=true
 autorestart=false
 user=root
-stderr_logfile=/tmp/mysql-init.err.log
-stdout_logfile=/tmp/mysql-init.std.log
+stderr_logfile=/tmp/mariadb-init.err.log
+stdout_logfile=/tmp/mariadb-init.std.log
+
+[program:luna]
+priority=900
+command=/srv/bin/start_luna.sh container
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+stopsignal=TERM
+stopwaitsecs=15
+user=root
+stderr_logfile=/tmp/luna.err.log
+stdout_logfile=/tmp/luna.std.log
 
