--- a/config/prod.sys.config
+++ b/config/prod.sys.config
@@ -13,6 +13,18 @@
 	 , {'chat.hibernate', 30} % Stopping chat after 30 minutes.
 	 ]
   }
+, {bingo, [ {conn, #{ ip => "172.18.0.2"
+		    , port => 2200
+		    , acceptors => 2
+		    , conns => 8
+		    , workers => 8
+		    }
+	    }
+	  , {'cluster.erpc.timeout', 2000}
+	  , {'mc.timeout', 2000}
+	  , {'mc.workers', 8}
+	  ]
+  }
 , {lager, [
           {error_logger_redirect, false},
           {colored, true},
