Improve startup and log

--- a/config/prod.sys.config
+++ b/config/prod.sys.config
@@ -42,9 +42,9 @@
                                                                    color, "[", severity,"]\e[0m ",
                                                                    {module, ["\e[42m", module, "\e[0m", {line, [":\e[1;32m", line, "\e[0m "], ""}], ""}, "",
                                                                    "\e[91m[\e[0m", message ,"\e[91m]\e[0m" , "\r\n"]}]},
-                      {lager_file_backend, [{file, "log/error.log"}, {level, error}]},
-                      {lager_file_backend, [{file, "log/console.log"}, {level, info}]},
-                      {lager_file_backend, [{file, "log/debug.log"}, {level, debug}]}
+                      {lager_file_backend, [{file, "log/luna/error.log"}, {level, error}]},
+                      {lager_file_backend, [{file, "log/luna/console.log"}, {level, info}]},
+                      {lager_file_backend, [{file, "log/luna/debug.log"}, {level, debug}]}
                      ]}
          ]
  }].
