--- a/supervisord.conf
+++ b/supervisord.conf
@@ -25,8 +25,8 @@ killasgroup=true
 stopsignal=TERM
 stopwaitsecs=15
 user=mysql
-stderr_logfile=/tmp/mariadb.err.log
-stdout_logfile=/tmp/mariadb.std.log
+stderr_logfile=/srv/log/mariadb/mariadb.err.log
+stdout_logfile=/srv/log/mariadb/mariadb.std.log
 
 [program:mariadb-init]
 priority=450
@@ -34,12 +34,12 @@ command=/srv/mariadb/init.sh container
 autostart=true
 autorestart=false
 user=root
-stderr_logfile=/tmp/mariadb-init.err.log
-stdout_logfile=/tmp/mariadb-init.std.log
+stderr_logfile=/srv/log/mariadb/mariadb-init.err.log
+stdout_logfile=/srv/log/mariadb/mariadb-init.std.log
 
 [program:luna]
 priority=900
-command=/srv/bin/start_luna.sh container
+command=/srv/bin/start_luna.sh luna-version container 
 autostart=true
 autorestart=true
 stopasgroup=true
@@ -47,6 +47,3 @@ killasgroup=true
 stopsignal=TERM
 stopwaitsecs=15
 user=root
-stderr_logfile=/tmp/luna.err.log
-stdout_logfile=/tmp/luna.std.log
-
