--- a/config/prod.sys.config
+++ b/config/prod.sys.config
@@ -13,7 +13,7 @@
 	 , {'chat.hibernate', 30} % Stopping chat after 30 minutes.
 	 ]
   }
-, {bingo, [ {conn, #{ ip => "172.18.0.2"
+, {bingo, [ {conn, #{ ip => luna-ip
 		    , port => 2200
 		    , acceptors => 2
 		    , conns => 8
