review and improve

--- a/rebar.config
+++ b/rebar.config
@@ -108,6 +108,31 @@
                             {vm_args, "config/prod.vm.args"},
                             {sys_config, "config/prod.sys.config"}
                            ]}
+                   ]},
+	    {dock, [
+                    {erl_opts, [{d, 'PROFILE', prod},
+                                {d, 'PROFILE_PROD'}]},
+                    {relx, [
+                            {release,
+                             {luna, "luna-version"},
+                             [ssl,
+                              mnesia,
+                              recon,
+                              lager,
+			      mysql,
+			      jiffy,
+			      erlware_commons,
+			      syn,
+			      bingo,
+                              luna
+                             ]},
+                            {overlay,
+                             [{copy, "priv", "priv"}]},
+                            {dev_mode, false},
+                            {include_erts, true},
+                            {vm_args, "config/dock.vm.args"},
+                            {sys_config, "config/dock.sys.config"}
+                           ]}
                    ]}
            ]}.
 
